AceliProject/force-app/main/default/objects/Loan__c/fields/Bonuses__c.field-meta.xml
<CustomField>
    <fullName>Bonuses__c</fullName>
    <label>Bonuses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>