AceliProject/force-app/main/default/objects/Loan__c/fields/Borrower_Status_New__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Status_New__c</fullName>
    <label>Borrower Status New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Returning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>