AceliProject/force-app/main/default/objects/Loan__c/fields/Country_New__c.field-meta.xml
<CustomField>
    <fullName>Country_New__c</fullName>
    <label>Country New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>